--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                     console.log("题拿起查 ");
                     console.log(this.city);
                     let that = this
-                    axios.get(`http://wthrcdn.etouch.cn/weather_mini?city=${this.city}`)
+                    axios.get(`https://wthrcdn.etouch.cn/weather_mini?city=${this.city}`)
                         .then(function(response) {
                             that.flag = true
                             console.log(that.city);
@@ -217,7 +217,7 @@
                         console.log(this.joke);
                     let that = this
                         //axios请求后面的this和前面的this指向不同
-                    axios.get("http://hn216.api.yesapi.cn/?s=App.Common_Joke.RandOne&num=1&app_key=292E998F36BBD443CBE5109C6AE3EADC&sign=EE57E4458645F52F33242227F7325248").then(function(response) {
+                    axios.get("https://hn216.api.yesapi.cn/?s=App.Common_Joke.RandOne&num=1&app_key=292E998F36BBD443CBE5109C6AE3EADC&sign=EE57E4458645F52F33242227F7325248").then(function(response) {
                         console.log(response.data.data.joke[0]);
                         that.joke = response.data.data.joke[0].toString()
                     }, function(err) {
